--- a/contact.html
+++ b/contact.html
@@ -143,12 +143,21 @@
                                 <img src="./assets/images/location.png" alt="" class="img-fluid hover-effect">
                             </figure>
                             <div class="contact_info_box_content_wrapper">
-                                <h5>Location:</h5>
-                                <p class="mb-0">121 King Street, Melbourne Victoria 3000 Australia</p>
+                                <h5>Locations:</h5>
+                                <p class="mb-0">695 Minnesota St, San Francisco, CA 94107, United States
+                                </p>
+                                <hr>
+                                <p class="mb-0">37D Crummer Road, Grey Lynn, Auckland 1021, New Zealand
+
+                                </p>
+                                <hr>
+                                <p class="mb-0">217/14 Lexington Dr, Bella Vista NSW 2153, Australia  
+
+                                </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <div class="contact_info_box hover-effect">
                             <figure class="mb-0">
                                 <img src="./assets/images/email.png" alt="" class="img-fluid hover-effect">
@@ -158,15 +167,18 @@
                                 <p class="mb-0"><a href="mailto:hello@knoa.ai" class="text-decoration-none">hello@knoa.ai</a></p>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <div class="contact_info_box hover-effect">
                             <figure class="mb-0">
                                 <img src="./assets/images/phone.png" alt="" class="img-fluid hover-effect">
                             </figure>
                             <div class="contact_info_box_content_wrapper">
-                                <h5>Phone:</h5>
-                                <p class="mb-0"><a href="tel:+1555123-4567" class="text-decoration-none">+1 (555) 123-4567</a></p>
+                                <h5>Contact Numbers :</h5>
+                                <p class="mb-0"><a href="tel:+14159634250" class="text-decoration-none"><b>USA:</b> +1 415 963 4250</a></p>
+                                <p class="mb-0"><a href="tel:+64800437030" class="text-decoration-none"><b>NZ:</b> +64 800 437030</a></p>
+                                <p class="mb-0"><a href="tel:: +611800496876" class="text-decoration-none"><b>AUS:</b> +61 1800 496 876</a></p>
+                               
                                 <!-- <p class="mb-0"><a href="tel:+1234567847858" class="text-decoration-none">+12345678 478 58</a></p> -->
                             </div>
                         </div>
