--- a/about.html
+++ b/about.html
@@ -479,7 +479,7 @@
                             <h6>GEt Started</h6>
                             <h2>Let's Make Something Great Together</h2>
                             <div class="btn_wrapper">
-                                <a class="text-decoration-none default-btn-two btn-size-18 hover-effect" href="https://calendly.com/developergulsherkhan">Let's Talk<i class="fa-solid fa-angle-right"></i></a>
+                                <a class="text-decoration-none default-btn-two btn-size-18 hover-effect" href="https://calendly.com/knoa-team">Let's Talk<i class="fa-solid fa-angle-right"></i></a>
                            
                         </div>
                         </div>
