--- a/contact.html
+++ b/contact.html
@@ -188,7 +188,7 @@
             <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12" data-aos="fade-right">
                 <div class="contact_info_form_content">
                     <h4>Send us a Message</h4>
-                    <form id="contactpage" method="POST" action="./contact-form.php">
+                    <form id="contactpage" method="POST" action="https://formspree.io/f/xrbqkral">
                         <div class="row">
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <div class="form-group mb-0">
