--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </div>
                         <div class="btn_wrapper" data-aos="fade-up">
                             <a class="text-decoration-none default-btn btn-size-18 hover-effect readmore_btn" href="./about.html">Learn More<i class="fa-solid fa-angle-right"></i></a>
-                            <a class="text-decoration-none default-btn-two btn-size-18 hover-effect" href="https://calendly.com/developergulsherkhan">Let's Talk<i class="fa-solid fa-angle-right"></i></a>
+                            <a class="text-decoration-none default-btn-two btn-size-18 hover-effect" href="https://calendly.com/knoa-team">Let's Talk<i class="fa-solid fa-angle-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -873,7 +873,7 @@ Connected to Everything You Use, Knoa AI integrates effortlessly with your exist
                             <h6>GEt Started</h6>
                             <h2>Let's Make Something Great Together</h2>
                             <div class="btn_wrapper">
-                                <a class="text-decoration-none default-btn-two btn-size-18 hover-effect" href="https://calendly.com/developergulsherkhan">Let's Talk<i class="fa-solid fa-angle-right"></i></a>
+                                <a class="text-decoration-none default-btn-two btn-size-18 hover-effect" href="https://calendly.com/knoa-team">Let's Talk<i class="fa-solid fa-angle-right"></i></a>
                            
                         </div>
                         </div>
