--- a/faqs.html
+++ b/faqs.html
@@ -88,7 +88,7 @@
                             <a class="nav-link" href="./contact.html">Contact us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link talk_btn" href="https://calendly.com/developergulsherkhan">Let’s Talk <i class="fa-solid fa-angle-right"></i></a>
+                            <a class="nav-link talk_btn" href="https://calendly.com/knoa-team">Let’s Talk <i class="fa-solid fa-angle-right"></i></a>
                         </li>
                     </ul>
                 </div>
