--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ Connected to Everything You Use, Knoa AI integrates effortlessly with your exist
     </div>
 </section>
 <!-- PORTFOLIO SECTION -->
-<section class="portfolio_section">
+<!-- <section class="portfolio_section">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
@@ -713,7 +713,7 @@ Connected to Everything You Use, Knoa AI integrates effortlessly with your exist
             <img src="./assets/images/portfolio_left_shape.png" alt="" class="img-fluid">
         </figure>
     </div>
-</section>
+</section> -->
 <!-- TESTIMONIALS SECTION -->
 
 <!-- COMBO SECTION -->
@@ -905,7 +905,7 @@ Connected to Everything You Use, Knoa AI integrates effortlessly with your exist
                                 </p>
                             </li>
                             <li class="icons hover-effect"><a href="https://www.facebook.com/profile.php?id=61575790220411"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a></li>
-                            <li class="icons hover-effect"><a href="www.instagram.com/knoa_ai"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
+                            <li class="icons hover-effect"><a href="https://www.instagram.com/knoa_ai"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
                             <li class="icons hover-effect"><a href="https://www.linkedin.com/company/107181207/admin/dashboard/s"><i class="fa-brands fa-linkedin-in mr-0" aria-hidden="true"></i></a></li>
                         </ul>
                     </div>
