--- a/projects.html
+++ b/projects.html
@@ -564,7 +564,7 @@
                                 </p>
                             </li>
                             <li class="icons hover-effect"><a href="https://www.facebook.com/profile.php?id=61575790220411"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a></li>
-                            <li class="icons hover-effect"><a href="www.instagram.com/knoa_ai"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
+                            <li class="icons hover-effect"><a href="https://www.instagram.com/knoa_ai"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
                             <li class="icons hover-effect"><a href="https://www.linkedin.com/company/107181207/admin/dashboard/s"><i class="fa-brands fa-linkedin-in mr-0" aria-hidden="true"></i></a></li>
                         </ul>
                     </div>
