--- a/about.html
+++ b/about.html
@@ -188,31 +188,36 @@
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="statistics_box hover-effect">
                     <div class="span_wrapper">
-                        <span class="number counter">39</span>
-                        <span class="plus">K+</span>
+                        <!-- <span class="number counter">39</span>
+                        <span class="plus">K+</span> -->
                     </div>
-                    <p class="text-size-16 text-white pp">Doc's Processed</p>
-                    <p class="text-size-16 mb-0 text">AI-powered knowledge access for faster decision-making.</p>
+                    <p class="text-size-16 text-white pp"> Unleash AI Potential
+                    </p>
+                    <p class="text-size-16 mb-0 text">Empower your business with real-time insights and smarter decisions through AI-powered knowledge management.
+                    </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="statistics_box hover-effect">
                     <div class="span_wrapper">
-                        <span class="number counter">20</span>
-                        <span class="plus">K+</span>
+                        <!-- <span class="number counter">20</span>
+                        <span class="plus">K+</span> -->
                     </div>
-                    <p class="text-size-16 text-white pp">Users Supported</p>
-                    <p class="text-size-16 mb-0 text">Helping teams onboard, train, and operate smarter.</p>
+                    <p class="text-size-16 text-white pp">Scale Smarter, Grow Faster
+                    </p>
+                    <p class="text-size-16 mb-0 text">Equip your teams to onboard, train, and operate with the agility and precision that only AI can deliver.
+                    </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="statistics_box hover-effect">
                     <div class="span_wrapper">
-                        <span class="number counter">11</span>
-                        <span class="plus">+</span>
+                        <!-- <span class="number counter">11</span>
+                        <span class="plus">+</span> -->
                     </div>
-                    <p class="text-size-16 text-white pp">Industries Served</p>
-                    <p class="text-size-16 mb-0 text">From HR to IT, Knoa adapts across business functions.</p>
+                    <p class="text-size-16 text-white pp">Built for Every Industry
+                    </p>
+                    <p class="text-size-16 mb-0 text">From startups to enterprises, Knoa’s AI solutions adapt to your unique challenges and fuel your growth.</p>
                 </div>
             </div>
         </div>
