--- a/index.html
+++ b/index.html
@@ -178,6 +178,41 @@ s0.parentNode.insertBefore(s1,s0);
         <img src="./assets/images/banner_background_shape.png" alt="">
     </figure>
 </div>
+
+<!--  -->
+<!--  -->
+<section class="aboutus_section position-relative">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                <div class="aboutus_image">
+                    <figure class="aboutus_main_image mb-0">
+                        <img src="./assets/images/about_us_a.png" alt="" class="img-fluid">
+                    </figure>
+                    <figure class="aboutus_image_shape position-absolute mb-0 left_right_shape">
+                        <img src="./assets/images/aboutus_image_shape.png" alt="" class="img-fluid">
+                    </figure>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                <div class="aboutus_content" data-aos="fade-right">
+                    <!-- <h6>Transforming Documents into Intelligent AI for Business Growth</h6> -->
+                    <h2>Empowering Business with AI Solutions</h2>
+                    <p>Knoa AI delivers a comprehensive solution for businesses of all sizes, transforming static documents into an intelligent AI assistant that centralizes knowledge, automates workflows, and provides real-time insights to drive productivity and growth without replacing human talent. Leveraging cutting-edge LLMs and seamlessly integrating with existing business ecosystems, Knoa offers a suite of AI-powered services including a Knowledge Hub, Smart Training Assistant, Front Desk Scheduler, Support Chatbot, KPI Dashboard, and Process Automation Engine, enabling faster training, smoother operations, and smarter decision-making.</p>
+                    
+                </div>
+            </div>
+        </div>
+        <figure class="aboutus_background_shape mb-0 position-absolute left_right_shape">
+            <img src="./assets/images/aboutus_background_shape.jpg" alt="">
+        </figure>
+        <figure class="aboutus_top_shape mb-0 position-absolute top_bottom_shape">
+            <img src="./assets/images/aboutus_top_shape.png" alt="" class="img-fluid">
+        </figure>
+    </div>
+</section>
+<!--  -->
+<!--  -->
 <!-- STATISTICS SECTION -->
 <section class="statistics_section position-relative">
     <div class="container">
