--- a/index.html
+++ b/index.html
@@ -186,12 +186,14 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                 <div class="aboutus_image">
-                    <figure class="aboutus_main_image mb-0">
+                    <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
+<dotlottie-player src="https://lottie.host/d20a6e46-6af3-41b2-80f9-171a76b1da20/eVMqCWH9tw.lottie" background="transparent"  speed="1" style="width: 100%; height: 380px;z-index:999" loop autoplay></dotlottie-player>
+                    <!-- <figure class="aboutus_main_image mb-0">
                         <img src="./assets/images/about_us_a.png" alt="" class="img-fluid">
-                    </figure>
-                    <figure class="aboutus_image_shape position-absolute mb-0 left_right_shape">
+                    </figure> -->
+                    <!-- <figure class="aboutus_image_shape position-absolute mb-0 left_right_shape">
                         <img src="./assets/images/aboutus_image_shape.png" alt="" class="img-fluid">
-                    </figure>
+                    </figure> -->
                 </div>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
