--- a/index.html
+++ b/index.html
@@ -1072,8 +1072,14 @@ Connected to Everything You Use, Knoa AI integrates effortlessly with your exist
         </div>
     </div>
     <div class="bottom-portion">
-        <div class="copyright col-xl-12"> 
+        <div class="d-flex justify-content-between px-5">
+
+        <div class="copyright"> 
             <p>Copyright © 2025 knoa All rights reserved.</p>
+        </div>
+        <div class="copyright fw-bolder text-white">
+            Powered by<span class="text-danger mx-2"><a href="https://www.ugro.us/" > Ugro</a> </span>
+        </div>
         </div>
     </div>
 </section>
