--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@ s0.parentNode.insertBefore(s1,s0);
                             </figure>
                             <div class="contact_info_box_content_wrapper">
                                 <h5>Email Us:</h5>
-                                <p class="mb-0"><a href="mailto:info@knoa.ai" class="text-decoration-none">info@knoa.ai</a></p>
+                                <p class="mb-0"><a href="mailto:info@knoa.us " class="text-decoration-none">info@knoa.us </a></p>
                             </div>
                         </div>
                     </div>
